--- a/StubbingDemoPrep2024Tests/StubbingDemoPrep2024Tests.csproj
+++ b/StubbingDemoPrep2024Tests/StubbingDemoPrep2024Tests.csproj
@@ -20,6 +20,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.2" />
+    <PackageReference Include="Moq" Version="4.20.70" />
   </ItemGroup>
 
   <ItemGroup>
